# smartHome

./: .gitignore  CMakeLists.txt  Makefile  README.md  client.php  global.c  global.h  log  phpServer.php  service.php  smart
comm/: comm.h  log.c  log.h  str_comm.c  str_comm.h  syslog.c  syslog.h  udppropkt.h
data_list/: gw_list.c  gw_list.h  gw_node.c  gw_node.h  snPkt.c  snPkt.h
incharge/: extract_data.c  extract_data.h  format_bin_to_json.c  format_bin_to_json.h  format_json_to_bin.c  format_json_to_bin.h  to_gwclient.c  to_gwclient.h  to_uiclient.c  to_uiclient.h
json/: s2j.c  s2jdef.h
pthread/: locker.h  locker_pthread.c  locker_pthread.h  pthread_pool.c  pthread_pool.h
shell/: Readme.md  monitor.sh
time_task/: timer.c  timer.h
udp/: network.c  network.h  udp.c  udp.h
